# scarper

./: pyproject.toml
scarper/: main.py
